Fixed button contrast for air toolbars
Fixes #271

--- a/src/assets/field/src/css/RedactorInput.scss
+++ b/src/assets/field/src/css/RedactorInput.scss
@@ -179,7 +179,6 @@
     a {
       box-shadow: none;
       background: transparentize($inputColor, 0.85);
-      color: $textColor;
 
       &:focus,
       &:hover {
